# RepoWhisperer-

./: README.md
.claude/: settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-parser/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docgen/: .env.example  .gitignore  llm_test.py  pyproject.toml
docgen/docs-official/api/: llm_test.md  src.docgen.config.md  src.docgen.embedder.md  src.docgen.ingest.md  src.docgen.llm.base.md  src.docgen.llm.context.md  src.docgen.llm.deepseek.md  src.docgen.llm.gemini.md  src.docgen.llm.groq.md  src.docgen.llm.md  src.docgen.llm.openrouter.md  src.docgen.llm.prompt.md  src.docgen.main.md  src.docgen.models.md  src.docgen.parser.filter.md  src.docgen.parser.js_parser.md  src.docgen.parser.md  src.docgen.parser.python_parser.md  src.docgen.runner.md  src.docgen.store.md  src.docgen.ui.md  src.docgen.writer.md  tests.test_runner.md  tests.test_writer.md
docgen/src/docgen/: config.py  embedder.py  ingest.py  main.py  models.py  runner.py  store.py  ui.py  writer.py
docgen/src/docgen/llm/: __init__.py  base.py  context.py  deepseek.py  gemini.py  groq.py  openrouter.py  prompt.py  retry.py
docgen/src/docgen/parser/: __init__.py  filter.py  js_parser.py  python_parser.py
docgen/tests/: test_runner.py  test_writer.py
(+13 files in other folders)
