[project]
name = "docgen"
version = "0.1.0"
description = "CLI tool that scans code repos and auto-generates documentation using RAG + LLMs"
readme = "README.md"
authors = [
    { name = "Nitram2704", email = "martinsanchez270804@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.24.1",
    "python-dotenv>=1.0",
    "pathspec==1.0.4",
    "tree-sitter==0.25.2",
    "tree-sitter-javascript==0.25.0",
    "tree-sitter-typescript==0.23.2",
]

[project.scripts]
docgen = "docgen.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
